[gd_scene load_steps=16 format=3 uid="uid://bc11toql33v4v"]

[ext_resource type="Script" uid="uid://dyll7j31aw0ti" path="res://scripts/Fase_2/fase_2.gd" id="1_n3b2c"]
[ext_resource type="Texture2D" uid="uid://dutk7kavhe8eh" path="res://imagens/assets_Fase_2/2025-10-30_23h26_35.jpg" id="2_62mfm"]
[ext_resource type="PackedScene" uid="uid://bg6v6vkpja07x" path="res://Scene/Fase_2/AreaResposta_Fase_2.tscn" id="3_ud4fh"]
[ext_resource type="PackedScene" uid="uid://dgvskhj5ju57u" path="res://Scene/Fase_2/Card2Resposta_Fase_2.tscn" id="4_bwhiu"]
[ext_resource type="PackedScene" uid="uid://daab4pwpaq80a" path="res://Scene/Fase_2/Card6Resposta_Fase_2.tscn" id="5_pfejg"]
[ext_resource type="PackedScene" uid="uid://dpy8vaucybe1p" path="res://Scene/Fase_2/Card28Resposta_Fase_2.tscn" id="8_dhqrw"]
[ext_resource type="PackedScene" uid="uid://di7i1vwn2g80p" path="res://Scene/Fase_2/Card40Resposta_Fase_2.tscn" id="9_3yg8f"]
[ext_resource type="PackedScene" uid="uid://dqnw3mr4qw53p" path="res://Scene/Fase_2/Card48Resposta_Fase_2.tscn" id="10_b512p"]
[ext_resource type="Script" uid="uid://d031w2sd00h5s" path="res://scripts/Fase_3/area_pergaminho.gd" id="11_perg"]
[ext_resource type="Texture2D" uid="uid://d07suu7725cy6" path="res://imagens/assets_Fase_1/9.jpg" id="11_ud4fh"]
[ext_resource type="Script" uid="uid://dnj16rknwjes2" path="res://scripts/Fase_3/popup_dica.gd" id="12_popup"]
[ext_resource type="Texture2D" uid="uid://bsmc8pi2ji2aw" path="res://Scene/Fase_2/concluido2.png" id="14_concluido"]
[ext_resource type="PackedScene" uid="uid://df3fr12skxa4x" path="res://Scene/Fase_2/UI_Fase_2.tscn" id="15_ui_fase2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_perg"]
size = Vector2(83, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_popup"]
size = Vector2(112, 60)

[node name="Fase_2" type="Node2D"]
script = ExtResource("1_n3b2c")

[node name="Camera_Fase_2" type="Camera2D" parent="."]
position = Vector2(512, 384)

[node name="Background_Fase_2" type="Sprite2D" parent="."]
position = Vector2(504, 387)
scale = Vector2(1.05676, 1.17737)
texture = ExtResource("2_62mfm")

[node name="UI_Fase_2" parent="." instance=ExtResource("15_ui_fase2")]

[node name="ContainerCards_Fase_2" type="Node2D" parent="."]
position = Vector2(-400, 771)

[node name="AreaResposta1Fase2" parent="." instance=ExtResource("3_ud4fh")]
position = Vector2(749, 159)
collision_layer = 16
collision_mask = 8

[node name="AreaResposta2Fase2" parent="." instance=ExtResource("3_ud4fh")]
position = Vector2(749, 287)
collision_layer = 16
collision_mask = 8

[node name="AreaResposta3Fase2" parent="." instance=ExtResource("3_ud4fh")]
position = Vector2(749, 413)
collision_layer = 16
collision_mask = 8

[node name="Card2Resposta_Fase_2" parent="." instance=ExtResource("4_bwhiu")]
position = Vector2(450, 670)
scale = Vector2(1.2, 1.2)
collision_layer = 8
collision_mask = 16

[node name="Card6Resposta_Fase_2" parent="." instance=ExtResource("5_pfejg")]
position = Vector2(700, 670)
scale = Vector2(1.2, 1.2)
collision_layer = 8
collision_mask = 16

[node name="Card28Resposta_Fase_2" parent="." instance=ExtResource("8_dhqrw")]
position = Vector2(200, 670)
scale = Vector2(1.2, 1.2)
collision_layer = 8
collision_mask = 16

[node name="Card40Resposta_Fase_2" parent="." instance=ExtResource("9_3yg8f")]
position = Vector2(325, 670)
scale = Vector2(1.2, 1.2)
collision_layer = 8
collision_mask = 16

[node name="Card48Resposta_Fase_2" parent="." instance=ExtResource("10_b512p")]
position = Vector2(575, 670)
scale = Vector2(1.2, 1.2)
collision_layer = 8
collision_mask = 16

[node name="Card_Correto_Fase_21" parent="." instance=ExtResource("8_dhqrw")]
visible = false
z_index = 10
z_as_relative = false
position = Vector2(750, 200)
scale = Vector2(1.2, 1.2)
collision_layer = 32
collision_mask = 0

[node name="Card_Correto_Fase_22" parent="." instance=ExtResource("4_bwhiu")]
visible = false
z_index = 10
z_as_relative = false
position = Vector2(750, 330)
scale = Vector2(1.2, 1.2)
collision_layer = 32
collision_mask = 0

[node name="Card_Correto_Fase_23" parent="." instance=ExtResource("9_3yg8f")]
visible = false
z_index = 10
z_as_relative = false
position = Vector2(750, 460)
scale = Vector2(1.2, 1.2)
collision_layer = 32
collision_mask = 0

[node name="AreaPergaminho" type="Area2D" parent="."]
script = ExtResource("11_perg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaPergaminho"]
position = Vector2(943.5, 678)
shape = SubResource("RectangleShape2D_perg")

[node name="PopupDica" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("12_popup")

[node name="pergaminho" type="Sprite2D" parent="PopupDica"]
position = Vector2(504.262, 386.4)
scale = Vector2(1.51354, 1.6064)
texture = ExtResource("11_ud4fh")

[node name="Area2D" type="Area2D" parent="PopupDica"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PopupDica/Area2D"]
visible = false
position = Vector2(97, 48)
shape = SubResource("RectangleShape2D_popup")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="NivelConcluido" type="Control" parent="CanvasLayer"]
visible = false
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/NivelConcluido"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/NivelConcluido"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.0
offset_top = -7.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_concluido")
expand_mode = 1
